--- a/app/scss/_intro.scss
+++ b/app/scss/_intro.scss
@@ -1,5 +1,4 @@
 .intro {
-  padding-top: 65px;
   position: relative;
   @media (min-width: 992px) {
     .intro-img {
