--- a/app/scss/_navbar.scss
+++ b/app/scss/_navbar.scss
@@ -1,3 +1,7 @@
+.nav-wrapper{
+  height: 53px;
+}
+
 #mainNav.fixed{
   left: 0;
   top: 0;
